--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "patch-package": "^8.0.0",
     "react": "^19.0.0",
     "react-confetti": "^6.1.0",
+    "react-day-picker": "^9.0.4",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^3.0.1",
